fix(ui): fix word wrap in error alert

--- a/web/src/components/preview/Preview.css
+++ b/web/src/components/preview/Preview.css
@@ -31,6 +31,8 @@
   margin: 0;
   padding: 0;
   font: inherit;
+  word-wrap: break-word;
+  white-space: break-spaces;
 }
 
 .app-preview__progress {
